Fix share z-index

--- a/src/styles/share.css
+++ b/src/styles/share.css
@@ -7,6 +7,7 @@
     width: 0;
     font-size: 10px;
     bottom: 0;
+    z-index: 1000;
 }
 
 .IconContainer span{
